--- a/packages/default_config/logger.yaml
+++ b/packages/default_config/logger.yaml
@@ -7,7 +7,8 @@ logger:
 #   custom_components.o365: info
     homeassistant.loader: error
     homeassistant.components.ring: error
-    # homeassistant.components.nut: debug
+    homeassistant.components.nut: critical
+    homeassistant.components.ipp: critical
     # custom_components.hacs: debug
     # hacs: debug
     # queueman: debug
