--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,12 @@ __pycache__/
 .uuid
 home-assistant*
 update.sh
+shell_scripts/.dropbox_uploader
 
 Reinclude files
 !.storage/lovelace
 !.storage/lovelace_resources
+!shell_scripts/.dropbox_uploader.sh
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
