--- a/packages/default_config/logger.yaml
+++ b/packages/default_config/logger.yaml
@@ -13,6 +13,9 @@ logger:
     # hacs: debug
     # queueman: debug
     # AIOGitHubAPI: debug
+#    speedtest: debug
+#    custom_components.speedtestdotnet: debug
+#    homeassistant.components.speedtestdotnet: debug
 #  homeassistant.components.media_player: error
 #  homeassistant.components.mobile_app.webhook: fatal
 # Example configuration.yaml entry
