--- a/packages/error_checking.yaml
+++ b/packages/error_checking.yaml
@@ -9,16 +9,14 @@ binary_sensor:
         friendly_name: "Internet"
         device_class: connectivity
         value_template: "{{ is_state('input_boolean.internet', 'on') }}"
-      dlan_dr:
-        friendly_name: "Devolo Dining Room"
-        device_class: connectivity
-        value_template: "{{ is_state('input_boolean.dlan_dr', 'on') }}"
 
 input_boolean:
   internet:
   hue:
   dlan_dr:
   ups:
+  texecom:
+  test:
 
 input_datetime:
   core_log:
