--- a/packages/nest.yaml
+++ b/packages/nest.yaml
@@ -15,3 +15,11 @@ sensor:
           {% else %}
             0
           {% endif %}
+      nest_hotwater:
+        unit_of_measurement: "on"
+        value_template: >-
+          {% if is_state('switch.tyr_celyn_thermostat_2', 'on') %}
+            1
+          {% else %}
+            0
+          {% endif %}
