--- a/packages/zwave.yaml
+++ b/packages/zwave.yaml
@@ -13,17 +13,17 @@ binary_sensor:
       zwave_office_fibaro_motion:
         device_class: motion
         friendly_name: Office Fibaro Motion
-        value_template: "{{ is_state('binary_sensor.fgms001_zw5_motion_sensor_home_security_motion_detected', 'on') }}"
+        value_template: "{{ is_state('binary_sensor.motion_sensor_home_security_motion_detection', 'on') }}"
 sensor:
   - platform: template
     sensors:
       zwave_office_fibaro_illuminance:
-        value_template: "{{ '%.0f'%(states('sensor.fgms001_zw5_motion_sensor_illuminance') | float) }}"
+        value_template: "{{ '%.0f'%(states('sensor.motion_sensor_illuminance') | float) }}"
         friendly_name: 'Office Fibaro Illuminance'
         unit_of_measurement: 'lux'
         device_class: illuminance
       zwave_office_fibaro_temperature:
-        value_template: "{{ '%.0f'%(states('sensor.fgms001_zw5_motion_sensor_air_temperature') | float) }}"
+        value_template: "{{ '%.0f'%(states('sensor.motion_sensor_air_temperature') | float) }}"
         friendly_name: 'Office Fibaro Temperature'
         unit_of_measurement: '°C'
         device_class: temperature
@@ -33,23 +33,23 @@ switch:
     switches:
       zwave_living_room_main_light_switch:
         friendly_name: Main Light Switch
-        value_template: "{{ is_state('switch.fibaro_double_switch_2_instance_1_switch', 'on') }}"
+        value_template: "{{ is_state('switch.double_switch_2', 'on') }}"
         turn_on:
           service: switch.turn_on
           data:
-            entity_id: switch.fibaro_double_switch_2_instance_1_switch
+            entity_id: switch.double_switch_2
         turn_off:
           service: switch.turn_off
           data:
-            entity_id: switch.fibaro_double_switch_2_instance_1_switch
+            entity_id: switch.double_switch_2
       zwave_living_room_side_light_switch:
         friendly_name: Fireplace Light Switch
-        value_template: "{{ is_state('switch.fibaro_double_switch_2_instance_2_switch', 'on') }}"
+        value_template: "{{ is_state('switch.double_switch_2_2', 'on') }}"
         turn_on:
           service: switch.turn_on
           data:
-            entity_id: switch.fibaro_double_switch_2_instance_2_switch
+            entity_id: switch.double_switch_2_2
         turn_off:
           service: switch.turn_off
           data:
-            entity_id: switch.fibaro_double_switch_2_instance_2_switch
+            entity_id: switch.double_switch_2_2
