--- a/packages/presence.yaml
+++ b/packages/presence.yaml
@@ -6,13 +6,13 @@ binary_sensor:
           {{ is_state('binary_sensor.living_room_hue_motion_motion', 'on')
           or is_state('binary_sensor.geniushub_living_room_occupancy', 'on') }}
         device_class: motion
-        friendly_name: 'Living Room Occupancy' 
+        friendly_name: 'Living Room Motion' 
       kitchen_occupancy:
         value_template: >-
           {{ is_state('binary_sensor.kitchen_pir', 'on')
           or is_state('binary_sensor.geniushub_kitchen_occupancy', 'on') }}
         device_class: motion
-        friendly_name: 'Kitchen Occupancy' 
+        friendly_name: 'Kitchen Motion' 
       downstairs_occupancy:
         value_template: >-
           {{ is_state('binary_sensor.living_room_hue_motion_motion', 'on')
@@ -20,7 +20,7 @@ binary_sensor:
           or is_state('binary_sensor.kitchen_pir', 'on')
           or is_state('binary_sensor.geniushub_kitchen_occupancy', 'on') }}
         device_class: motion
-        friendly_name: 'Downstairs Occupancy' 
+        friendly_name: 'Downstairs Motion' 
       upstairs_occupancy:
         value_template: >-
           {{ is_state('binary_sensor.geniushub_bedroom1_occupancy', 'on')
@@ -28,7 +28,7 @@ binary_sensor:
           or is_state('binary_sensor.geniushub_bedroom3_occupancy', 'on')
           or is_state('binary_sensor.zwave_office_fibaro_motion', 'on') }}
         device_class: motion
-        friendly_name: 'Upstairs Occupancy' 
+        friendly_name: 'Upstairs Motion' 
 
 group:
   presence_all:
