--- a/packages/camera.yaml
+++ b/packages/camera.yaml
@@ -1,5 +1,13 @@
 camera:
   - platform: generic
+    name: Front Door Events
+    still_image_url: http://localhost:8123{{ states.camera.front_door_snapshot.attributes.entity_picture }}
+    stream_source: !secret front_door_events_source
+
+  - platform: generic
     name: Front Door Live
-    still_image_url: http://192.168.1.41:8123{{ states.camera.front_door_snapshot.attributes.entity_picture }}
-    stream_source: rtsp://03cabcc9-ring-mqtt:8554/54e01981fb8c_live
+    still_image_url: http://localhost:8123{{ states.camera.front_door_snapshot.attributes.entity_picture }}
+    stream_source: !secret front_door_live_source
+ 
+stream:
+  ll_hls: true
