--- a/packages/error_checking.yaml
+++ b/packages/error_checking.yaml
@@ -1,22 +1,22 @@
-binary_sensor:
-  - platform: template
-    sensors:
-      hue:
-        friendly_name: "Hue"
-        device_class: connectivity
-        value_template: "{{ is_state('input_boolean.hue', 'on') }}"
-      internet:
-        friendly_name: "Internet"
-        device_class: connectivity
-        value_template: "{{ is_state('input_boolean.internet', 'on') }}"
+# binary_sensor:
+#   - platform: template
+#     sensors:
+#       hue:
+#         friendly_name: "Hue"
+#         device_class: connectivity
+#         value_template: "{{ is_state('input_boolean.hue', 'on') }}"
+#       internet:
+#         friendly_name: "Internet"
+#         device_class: connectivity
+#         value_template: "{{ is_state('input_boolean.internet', 'on') }}"
 
-input_boolean:
-  internet:
-  hue:
-  dlan_dr:
-  ups:
-  texecom:
-  test:
+# input_boolean:
+#   internet:
+#   hue:
+#   dlan_dr:
+#   m1utility:
+#   texecom:
+#   test:
 
 input_datetime:
   core_log:
@@ -25,6 +25,10 @@ input_datetime:
     has_time: true
   supervisor_log:
     name: supervisor_log
+    has_date: true
+    has_time: true
+  nodered_log:
+    name: nodered_log
     has_date: true
     has_time: true
     
