--- a/packages/geniushub.yaml
+++ b/packages/geniushub.yaml
@@ -2,6 +2,10 @@
 #   customize:
 #     "climate.genius_*":
 #       icon: mdi:radiator
+    # media_player.sky_q:
+    #   device_class: tv
+    # media_player.sky_q_mini:
+    #   device_class: tv
 
 geniushub:
   host: !secret genius_host
@@ -36,27 +40,27 @@ sensor:
   - platform: template
     sensors:
       geniushub_living_room_luminance:
-        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_20', 'state').luminance | float) }}"
+        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_20', 'state').luminance | float(0)) }}"
         friendly_name: 'Living Room Genius Illuminance' 
         unit_of_measurement: 'lux'
         device_class: illuminance
       geniushub_kitchen_luminance:
-        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_19', 'state').luminance | float) }}"
+        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_19', 'state').luminance | float(0)) }}"
         friendly_name: 'Kitchen Genius Illuminance' 
         unit_of_measurement: 'lux'
         device_class: illuminance
       geniushub_bedroom1_luminance:
-        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_30', 'state').luminance | float) }}"
+        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_30', 'state').luminance | float(0)) }}"
         friendly_name: 'Bedroom 1 Genius Illuminance' 
         unit_of_measurement: 'lux'
         device_class: illuminance
       geniushub_bedroom2_luminance:
-        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_21', 'state').luminance | float) }}"
+        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_21', 'state').luminance | float(0)) }}"
         friendly_name: 'Bedroom 2 Genius Illuminance' 
         unit_of_measurement: 'lux'
         device_class: illuminance
       geniushub_bedroom3_luminance:
-        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_22', 'state').luminance | float) }}"
+        value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_36', 'state').luminance | float(0)) }}"
         friendly_name: 'Bedroom 3 Genius Illuminance' 
         unit_of_measurement: 'lux'
         device_class: illuminance
