--- a/packages/hoobs.yaml
+++ b/packages/hoobs.yaml
@@ -7,7 +7,7 @@ homeassistant:
     switch.home_occupied_workshop:
       friendly_name: Workshop - Nest Mode
     switch.tyr_celyn_thermostat:
-      friendly_name: TC - Heating
+      friendly_name: TC - Eco Mode
     switch.tyr_celyn_thermostat_2:
       friendly_name: TC - Hot Water
     binary_sensor.home_occupied_the_mews:
@@ -17,56 +17,42 @@ homeassistant:
     binary_sensor.home_occupied_workshop:
       friendly_name: Workshop - Presence - Nest
     binary_sensor.downstairs:
-      friendly_name: Downstairs - CO
-    binary_sensor.downstairs_2:
       friendly_name: Downstairs - Smoke
+      icon: mdi:smoke
+    binary_sensor.downstairs_2:
+      friendly_name: Downstairs - CO
+      icon: mdi:molecule-co
     binary_sensor.downstairs_3:
       friendly_name: Downstairs - Nest Occupancy
     binary_sensor.upstairs:
-      friendly_name: Upstairs - CO
-    binary_sensor.upstairs_2:
       friendly_name: Upstairs - Smoke
+      icon: mdi:smoke
+    binary_sensor.upstairs_2:
+      friendly_name: Upstairs - CO
+      icon: mdi:molecule-co
     binary_sensor.upstairs_3:
       friendly_name: Upstairs - Nest Occupancy
-    binary_sensor.tyr_celyn:
-      friendly_name: TC - CO
-    binary_sensor.tyr_celyn_2:
-      friendly_name: TC - Smoke
+    binary_sensor.tc_dining_room:
+      friendly_name: TC - DR - Smoke
+      icon: mdi:smoke
+    binary_sensor.tc_dining_room_2:
+      friendly_name: TC - DR - CO
+      icon: mdi:molecule-co
+    binary_sensor.tc_living_room:
+      friendly_name: TC - LR - Smoke
+      icon: mdi:smoke
+    binary_sensor.tc_living_room_2:
+      friendly_name: TC - LR - CO
+      icon: mdi:molecule-co
+    binary_sensor.tc_living_room_3:
+      friendly_name: TC - LR - Nest Occupancy
     sensor.tyr_celyn_thermostat_temperature:
-      friendly_name: TC - Current Temperature
+      friendly_name: Hoobs - Temperature
     sensor.tyr_celyn_thermostat_humidity:
-      friendly_name: TC - Humidity
+      friendly_name: Hoobs - Humidity
+    sensor.tyr_celyn_thermostat_current_temperature:
+      friendly_name: Hoobs - Current Temperature
+    sensor.tyr_celyn_thermostat_current_humidity:
+      friendly_name: Hoobs - Current Humidity
     climate.tyr_celyn_thermostat:
-      friendly_name: TC - Thermostat
-
-
-# binary_sensor:
-#   - platform: template
-#     sensors:
-#       hoobs_home_occupied_workshop:
-#         friendly_name: "TC - Presence - Workshop"
-#         device_class: occupancy
-#         value_template: "{{ is_state('input_boolean.hoobs_home_occupied_workshop', 'on') }}"
-#       hoobs_home_occupied_tyr_celyn:
-#         friendly_name: "TC - Presence - Nest"
-#         device_class: occupancy
-#         value_template: "{{ is_state('input_boolean.hoobs_home_occupied_tyr_celyn', 'on') }}"
-#       hoobs_upstairs_occupancy:
-#         friendly_name: "Home - Presence - Upstairs"
-#         device_class: occupancy
-#         value_template: "{{ is_state('input_boolean.hoobs_upstairs_occupancy', 'on') }}"
-#       hoobs_downstairs_occupancy:
-#         friendly_name: "Home - Presence - Downstairs"
-#         device_class: occupancy
-#         value_template: "{{ is_state('input_boolean.hoobs_downstairs_occupancy', 'on') }}"
-#       hoobs_home_occupied_the_mews:
-#         friendly_name: "Home - Presence - Nest"
-#         device_class: occupancy
-#         value_template: "{{ is_state('input_boolean.hoobs_home_occupied_the_mewsp', 'on') }}"
-
-# input_boolean:
-#   hoobs_home_occupied_workshop:
-#   hoobs_home_occupied_tyr_celyn:
-#   hoobs_upstairs_occupancy:
-#   hoobs_downstairs_occupancy:
-#   hoobs_home_occupied_the_mews:
+      friendly_name: Hoobs - Thermostat
