--- a/packages/sony.yaml
+++ b/packages/sony.yaml
@@ -7,5 +7,6 @@ media_player:
     android: True
     user_labels: True
     sourcefilter:
-      - HDMI
+      - 'HDMI 1'
+      - 'HDMI 3'
     name: SFTV
